<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cpsc"
    tools:context=".Splash_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E31B5E20"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textAlignment="center"
                android:id="@+id/appNameTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/breeserif"
                android:text="@string/welcome"
                android:textColor="#00FFFF"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:padding="16dp"
                android:fontFamily="@font/lobster"
                android:text="@string/college_name"
                android:id="@+id/appNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

<!--

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/heartbeat"/>
            </LinearLayout>
-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/BottomTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developed_by"
                        android:textColor="#fff"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/pacifico"
                        android:text="HDSL"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>