<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCE4EC"
    tools:context=".Teacher">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/cpsc"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:background="#D51B5E20"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/azad"
                android:paddingBottom="0dp"
                android:text="@string/teacher"
                android:textAlignment="center"
                android:textColor="#E2D7D7"
                android:textSize="25sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/policeCv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="teacherListCollege"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:text="@string/teacher_list_college"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/fireServiceCv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="TeacherListSchool"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:text="@string/teacher_list_school"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/ambulanceCv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="ClassTeacherPrimary"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:text="@string/class_teacher_nprimary"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/hospitalCv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="ClassTeacherSecondary"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:text="@string/class_teacher_nsecondary"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/electricityCv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="ClassTeacherEleven"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView

                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:text="@string/class_teacher_neleven"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="ClassTeacherTwelve"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="10dp"
                                android:src="@drawable/school_seven" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/azad"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:text="@string/class_teacher_ntwelve"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>